# mkdocs-gentags

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint.yml  tests.yml
changelog/: index.html
development/: index.html
docs/: development.md  index.md  page-tag-multiple.md  page-tag-one.md  page-tag-two.md
mkdocs_gentags/: config.py  plugin.py
page-tag-multiple/: index.html
page-tag-one/: index.html
page-tag-two/: index.html
search/: search_index.json
tags/: index.html
tags/one/: index.html
tags/two/: index.html
tests/: conftest.py  test_on_config.py  test_on_files.py  test_on_pages.py  utils.py
theme/: tag.html  tags.html
